# syslog-ng

lib/filter/: CMakeLists.txt  Makefile.am  filter-expr-grammar.ym  filter-expr-parser.c  filter-length.c  filter-length.h
lib/filter/tests/: CMakeLists.txt  Makefile.am  test_filters_length.c
modules/: Makefile.am
modules/basicfuncs/: Makefile.am  base-funcs.c  basic-funcs.c  misc-funcs.c  radix-funcs.c  str-funcs.c
modules/basicfuncs/dcurrie-ascii85/: ascii85.c
modules/basicfuncs/tests/: test_basicfuncs.c
modules/examples/: CMakeLists.txt  Makefile.am  example-plugins.c
modules/examples/filters/filter-length/: Makefile.am  filter-length-grammar.ym  filter-length-parser.c  filter-length-parser.h  filter-length.c  filter-length.h
modules/examples/filters/filter-length/tests/: test_filters_length.c
modules/examples/parsers/ordered-parser/: CMakeLists.txt  Makefile.am  README.md  ordered-parser-grammar.ym  ordered-parser-parser.c  ordered-parser-parser.h  ordered-parser.c  ordered-parser.h
modules/examples/parsers/ordered-parser/tests/: CMakeLists.txt  Makefile.am  test_ordered_parser.c
modules/examples/sources/static-file/: CMakeLists.txt  Makefile.am  README.md  static-file-grammar.ym  static-file-parser.c  static-file-parser.h  static-file-reader.c  static-file-reader.h  static-file.c  static-file.h
modules/examples/templates/radix-funcs/: CMakeLists.txt  Makefile.am  README.md  radix-funcs.c  radix-funcs.h
modules/examples/templates/radix-funcs/tests/: CMakeLists.txt  Makefile.am  test_radix_funcs.c
